fixed color contrasts issue, responsiveness, and passed accessibility audit

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
     height: 80px;
     align-items: row;
     justify-content: center;
-    background-color: rgb(218, 137, 137);
+    background-color: rgb(192, 81, 81);
     color: white;
     padding-top: 10px;
 }
