--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    height: 140px;
-    background-color: rgb(218, 137, 137);
+    height: 150px;
+    background-color: rgb(192, 81, 81);
 }
 
 .Header h1 {
@@ -13,7 +13,7 @@
 
 h1 {
     font-family: 'Dancing Script', cursive;
-    font-size: 40px;
+    font-size: 42px;
 }
 
 .Header a {
@@ -42,7 +42,7 @@ h1 {
         color: white;
         text-decoration: none;
         padding: 17px;
-        height: 155px;
+        height: 165px;
     }
 }
 
@@ -51,11 +51,9 @@ h1 {
 
 @media only screen and (min-width: 480px) {
     .Header {
-        display: flex;
         height: 130px;
         align-items: normal;
         justify-content: space-between;
-        background-color: rgb(218, 137, 137);
     }
     
     .Header h1 {
@@ -80,9 +78,21 @@ h1 {
         justify-content: flex-end;
         font-family: 'Montserrat',sans-serif;
         text-transform: uppercase;
-        font-size: 16px;
+        font-size: 18px;
         margin-right: 10px;
     }
-    
+}
+
+@media only screen and (min-width: 600px) {
+    .Header_not-logged-in, .Header_logged-in {
+        display: flex;
+        flex: 1;
+        align-items: center;
+        justify-content: flex-end;
+        font-family: 'Montserrat',sans-serif;
+        text-transform: uppercase;
+        font-size: 20px;
+        margin-right: 10px;
+    }
 }
 
